--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/Tableview/MMSingleLabelTableCell.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/Tableview/MMSingleLabelTableCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,7 +25,10 @@
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Xip-xN-iBC" secondAttribute="trailing" constant="20" id="Zdo-ip-wgd"/>
                     <constraint firstItem="Xip-xN-iBC" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="gG5-4m-OSJ"/>
+                    <constraint firstAttribute="bottom" secondItem="Xip-xN-iBC" secondAttribute="bottom" constant="11.5" id="hNh-q0-u9Y"/>
+                    <constraint firstItem="Xip-xN-iBC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11.5" id="ngg-ih-R8O"/>
                     <constraint firstItem="Xip-xN-iBC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="wlZ-pl-iHH"/>
                 </constraints>
             </tableViewCellContentView>
